codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__subagent_update_cell_preserves_multiline_summary_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• Subagent update: users-dev-codex-worker completed
  └ Top candidate: `abc123`
    this change collapsed mode handling
    
    next steps:
    - restore execute mode
    - add snapshot coverage
